--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-app",
-  "homepage": "https://ikariLain.github.io/Cv-React/",
+  "homepage": "https://ikariLain.github.io/React-CV/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
